# pythonmate-7-minute-integrity-scan

./: .env.template  .gitignore  README.md  SECURITY_MODEL.md  pyproject.toml  requirements.txt
src/cli/: main.py
src/core/: integrity_scanner.py  sap_connector.py  security_validator.py
